# arduino_st4_goto

./: CMakeLists.txt  LICENSE.md  Makefile  README.md  arduino_st4_goto.cpp  arduino_st4_goto.h  config.h.cmake  indi_arduino_st4_goto.xml.cmake  scopesim_helper.cpp  scopesim_helper.h
ArduinoST4GoTo/: ArduinoST4GoTo.ino
